// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input matches withColouredError snapshot: with coloured error mount 1`] = `
.emotion-1 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
  border: 4px solid #f47738;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
    width: 50%;
  }
}

.emotion-1 [disabled] {
  cursor: auto;
}

.emotion-1:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

.glamor-0,
[data-glamor-0] {
  margin-bottom: 0;
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    margin-bottom: 0;
  }
}

<glamorous(Input)
  error="example"
  errorColor="#f47738"
  type="text"
>
  <Input
    className="glamor-0"
    error="example"
    errorColor="#f47738"
    type="text"
  >
    <Styled(input)
      className="glamor-0"
      error="example"
      errorColor="#f47738"
      type="text"
    >
      <input
        className="glamor-0 glamor-1"
        type="text"
      />
    </Styled(input)>
  </Input>
</glamorous(Input)>
`;

exports[`Input matches withError snapshot: with error mount 1`] = `
.emotion-1 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
  border: 4px solid #b10e1e;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
    width: 50%;
  }
}

.emotion-1 [disabled] {
  cursor: auto;
}

.emotion-1:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

.glamor-0,
[data-glamor-0] {
  margin-bottom: 0;
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    margin-bottom: 0;
  }
}

<glamorous(Input)
  error="example"
  type="text"
>
  <Input
    className="glamor-0"
    error="example"
    type="text"
  >
    <Styled(input)
      className="glamor-0"
      error="example"
      type="text"
    >
      <input
        className="glamor-0 glamor-1"
        type="text"
      />
    </Styled(input)>
  </Input>
</glamorous(Input)>
`;

exports[`Input matches wrapper snapshot: wrapper mount 1`] = `
.emotion-1 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
    width: 50%;
  }
}

.emotion-1 [disabled] {
  cursor: auto;
}

.emotion-1:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

.glamor-0,
[data-glamor-0] {
  margin-bottom: 0;
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    margin-bottom: 0;
  }
}

<glamorous(Input)
  type="text"
>
  <Input
    className="glamor-0"
    type="text"
  >
    <Styled(input)
      className="glamor-0"
      type="text"
    >
      <input
        className="glamor-0 glamor-1"
        type="text"
      />
    </Styled(input)>
  </Input>
</glamorous(Input)>
`;
